Refactor related-products section and add aspect ratios for product images

--- a/assets/app.css
+++ b/assets/app.css
@@ -1107,6 +1107,12 @@ th {
 .aspect-video {
   aspect-ratio: 16 / 9;
 }
+.aspect-\[3\/4\] {
+  aspect-ratio: 3/4;
+}
+.aspect-\[8\/10\] {
+  aspect-ratio: 8/10;
+}
 .h-10 {
   height: 2.5rem;
 }
