--- a/sections/related-products.liquid
+++ b/sections/related-products.liquid
@@ -1,10 +1,14 @@
-<div x-data="relatedProducts" class="container mt-10">
+<div
+  x-data="relatedProducts"
+  x-init="initialize({{ product.id }})"
+  x-show="products.length > 0"
+  class="container mt-10">
   <h2 class="text-4xl uppercase text-primary text-center my-10">Podobne produkty</h2>
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 items-start text-xl relative place-items-center my-10">
     <template x-for="product in products">
       <a
         x-data
-        x-reveal
+        x-reveal.delay.500
         class="relative hover:shadow-lg transition p-2 text-xl font-light group h-max"
         :href="product.onlineStoreUrl == null ? product.handle : product.onlineStoreUrl">
         <div>
