--- a/sections/complementary-products.liquid
+++ b/sections/complementary-products.liquid
@@ -3,7 +3,7 @@
     {% if recommendations.intent == 'related' %}
       <h2 class="text-4xl uppercase text-center text-primary">Powiązane produkty</h2>
     {% elsif recommendations.intent == 'complementary' %}
-      <h2 class="text-4xl uppercase text-center text-primary">Akcesoria dodatkowe</h2>
+      <h2 class="text-4xl uppercase text-center text-primary mt-32">Akcesoria dodatkowe</h2>
     {% endif %}
 
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 items-start text-xl relative place-items-center mt-10">
