missing file from last commit

--- a/assets/app.css
+++ b/assets/app.css
@@ -262,6 +262,18 @@ body {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
+#shopify-pc__banner {
+  margin: 20px;
+  border-radius: 10px !important;
+}
+.shopify-pc__banner__dialog button {
+  transition: 0.1s ease-in-out;
+}
+.shopify-pc__banner__btn-accept:hover,
+.shopify-pc__banner__btn-decline:hover {
+  background-color: black !important;
+  color: white !important;
+}
 /* ! tailwindcss v3.3.5 | MIT License | https://tailwindcss.com */
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
@@ -1053,6 +1065,9 @@ th {
 .mt-3 {
   margin-top: 0.75rem;
 }
+.mt-32 {
+  margin-top: 8rem;
+}
 .mt-4 {
   margin-top: 1rem;
 }
@@ -1070,15 +1085,6 @@ th {
 }
 .mt-auto {
   margin-top: auto;
-}
-.mt-20 {
-  margin-top: 5rem;
-}
-.mt-44 {
-  margin-top: 11rem;
-}
-.mt-32 {
-  margin-top: 8rem;
 }
 .block {
   display: block;
@@ -2716,10 +2722,6 @@ th {
   .sm\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
-  }
-  .sm\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
   }
   .sm\:text-\[1rem\] {
     font-size: 1rem;
