updated section name

--- a/sections/related-collection.liquid
+++ b/sections/related-collection.liquid
@@ -107,7 +107,7 @@
 </div>
 {% schema %}
   {
-    "name": "Produkty powiązane",
+    "name": "Produkty z tej samej kolekcji",
     "settings": [
       {
         "type": "number",
@@ -118,7 +118,7 @@
     ],
     "presets": [
       {
-        "name": "Podobne produkty",
+        "name": "Produkty z tej samej kolekcji",
         "category": "Produkty"
       }
     ]
