--- a/sections/related-products.liquid
+++ b/sections/related-products.liquid
@@ -118,7 +118,7 @@
     ],
     "presets": [
       {
-        "name": "Podobne produkty",
+        "name": "Produkty powiązane",
         "category": "Produkty"
       }
     ]
