Redesigned complementary-products and related-collection sections. Now it's a slider

--- a/sections/related-collection.liquid
+++ b/sections/related-collection.liquid
@@ -4,107 +4,113 @@
   x-show="products.length > 0"
   class="container mt-10">
   <h2 class="text-2xl uppercase text-primary text-center my-10">Reszta kolekcji</h2>
-  <div class="swiper complementary-products-swiper">
-    <div class="swiper-wrapper items-stretch">
-      <template x-for="product in products">
-        <a
-          x-data
-          x-reveal.delay.500
-          class="!h-auto relative hover:shadow-lg transition p-2 text-xl font-light group swiper-slide "
-          :href="product.onlineStoreUrl == null ? product.handle : product.onlineStoreUrl">
-          <div class="h-full flex flex-col">
+  <div class="flex items-center gap-2 sm:gap-4">
+    <div id="related-collection-btn-prev" class=" hidden sm:block cursor-pointer text-primary  hover:scale-125 active:scale-100 transition rounded-full">{% render 'icon-chevron-left'
+, size: 30 %}</div>
+    <div id="related-collection-swiper" class="swiper">
+      <div class="swiper-wrapper items-stretch ">
+        <template x-for="product in products">
+          <a
+            x-data
+            x-reveal.delay.500
+            class="!h-auto relative hover:shadow-lg transition p-2 text-xl font-light group swiper-slide "
+            :href="product.onlineStoreUrl == null ? product.handle : product.onlineStoreUrl">
+            <div class="h-full flex flex-col">
 
-              {% comment %} Featured image {% endcomment %}
-            <img
-              :src="product.featuredImage.url"
-              class="aspect-[8/10]"
-              width="500"
-              height="600"
-              loading="lazy"
-              :class="product.images.nodes[1] ? 'group-hover:hidden' : '' " />
+                {% comment %} Featured image {% endcomment %}
+              <img
+                :src="product.featuredImage.url"
+                class="aspect-[8/10]"
+                width="500"
+                height="600"
+                loading="lazy"
+                :class="product.images.nodes[1] ? 'group-hover:hidden' : '' " />
 
-              {% comment %} Second image {% endcomment %}
+                {% comment %} Second image {% endcomment %}
 
-            <img
-              x-show="product.images.nodes[1]"
-              :src="product.images.nodes[1] ? product.images.nodes[1].url : ''"
-              width="500"
-              height="600"
-              loading="lazy"
-              class="aspect-[8/10] hidden group-hover:block" />
+              <img
+                x-show="product.images.nodes[1]"
+                :src="product.images.nodes[1] ? product.images.nodes[1].url : ''"
+                width="500"
+                height="600"
+                loading="lazy"
+                class="aspect-[8/10] hidden group-hover:block" />
 
 
-            <!-- Product Title -->
-            <div class="flex flex-col py-4 gap-2">
-              <div class="transition underline-offset-2 decoration-1 group-hover:underline" x-text="product.title"></div>
-              <template x-if="product.availableForSale">
-                <div class="font-medium flex gap-3">
+              <!-- Product Title -->
+              <div class="flex flex-col py-4 gap-2">
+                <div class="transition underline-offset-2 decoration-1 group-hover:underline" x-text="product.title"></div>
+                <template x-if="product.availableForSale">
+                  <div class="font-medium flex gap-3">
 
-                  <!-- Price range -->
-                  <div x-show="priceVaries(product)">
-                    <span x-text="helpers.formatMoney(product.priceRange.minVariantPrice.amount)"></span>
-                    -
-                    <span x-text="helpers.formatMoney(product.priceRange.maxVariantPrice.amount,true)"></span>
+                    <!-- Price range -->
+                    <div x-show="priceVaries(product)">
+                      <span x-text="helpers.formatMoney(product.priceRange.minVariantPrice.amount)"></span>
+                      -
+                      <span x-text="helpers.formatMoney(product.priceRange.maxVariantPrice.amount,true)"></span>
+                    </div>
+                    <!-- Price -->
+                    <div x-show="!priceVaries(product)">
+                      <span x-text="helpers.formatMoney(product.priceRange.minVariantPrice.amount,true)"></span>
+                    </div>
+
+                    <!-- Compare at price -->
+                    <s
+                      x-show="product.compareAtPriceRange.maxVariantPrice.amount > product.priceRange.minVariantPrice.amount"
+                      class=" font-normal"
+                      x-text="helpers.formatMoney(product.compareAtPriceRange.maxVariantPrice.amount,true)"></s>
                   </div>
-                  <!-- Price -->
-                  <div x-show="!priceVaries(product)">
-                    <span x-text="helpers.formatMoney(product.priceRange.minVariantPrice.amount,true)"></span>
-                  </div>
-
-                  <!-- Compare at price -->
-                  <s
-                    x-show="product.compareAtPriceRange.maxVariantPrice.amount > product.priceRange.minVariantPrice.amount"
-                    class=" font-normal"
-                    x-text="helpers.formatMoney(product.compareAtPriceRange.maxVariantPrice.amount,true)"></s>
-                </div>
-              </template>
-            </div>
-
-            <!-- TAGS -->
-            <div class="absolute top-6 select-none -left-1 flex flex-col gap-2 w-max items-start">
-              <template x-for="tag in product.metafields">
-                <template x-if="tag">
-                  <div
-                    x-text="tag?.reference.fields[0].value"
-                    class="px-3 py-1 uppercase text-white text-sm shadow-m"
-                    :style="{backgroundColor: tag?.reference.fields[1].value}"></div>
                 </template>
-              </template>
+              </div>
+
+              <!-- TAGS -->
+              <div class="absolute top-6 select-none -left-1 flex flex-col gap-2 w-max items-start">
+                <template x-for="tag in product.metafields">
+                  <template x-if="tag">
+                    <div
+                      x-text="tag?.reference.fields[0].value"
+                      class="px-3 py-1 uppercase text-white text-sm shadow-m"
+                      :style="{backgroundColor: tag?.reference.fields[1].value}"></div>
+                  </template>
+                </template>
+              </div>
+
+              <div
+                class="mt-auto "
+                x-data
+                x-show="true">
+                <form
+                  class="w-full flex justify-stretch"
+                  method="post"
+                  action="/cart/add"
+                  x-ref="product_form">
+                  <input
+                    type="hidden"
+                    name="id"
+                    :value="findFirstAvailableVariant(product.variants.edges) ? findFirstAvailableVariant(product.variants.edges).split('/')[4] : null" />
+                  <input
+                    min="1"
+                    type="hidden"
+                    id="quantity"
+                    name="quantity"
+                    value="1" />
+                  <button
+                    type="submit"
+                    name="add"
+                    class="button w-full bg-transparent border border-1 text-primary border-primary shadow-none hover:bg-primary hover:text-white transition ease-in-out"
+                    @click.prevent="Functions.addToCart($refs.product_form)"
+                    :disabled="!findFirstAvailableVariant(product.variants.edges)"
+                    x-text="findFirstAvailableVariant(product.variants.edges) ? 'Do koszyka' : 'Wyprzedane'"></button>
+                </form>
+              </div>
             </div>
 
-            <div
-              class="mt-auto "
-              x-data
-              x-show="true">
-              <form
-                class="w-full flex justify-stretch"
-                method="post"
-                action="/cart/add"
-                x-ref="product_form">
-                <input
-                  type="hidden"
-                  name="id"
-                  :value="findFirstAvailableVariant(product.variants.edges) ? findFirstAvailableVariant(product.variants.edges).split('/')[4] : null" />
-                <input
-                  min="1"
-                  type="hidden"
-                  id="quantity"
-                  name="quantity"
-                  value="1" />
-                <button
-                  type="submit"
-                  name="add"
-                  class="button w-full bg-transparent border border-1 text-primary border-primary shadow-none hover:bg-primary hover:text-white transition ease-in-out"
-                  @click.prevent="Functions.addToCart($refs.product_form)"
-                  :disabled="!findFirstAvailableVariant(product.variants.edges)"
-                  x-text="findFirstAvailableVariant(product.variants.edges) ? 'Do koszyka' : 'Wyprzedane'"></button>
-              </form>
-            </div>
-          </div>
-
-        </a>
-      </template>
+          </a>
+        </template>
+      </div>
     </div>
+    <div id="related-collection-btn-next" class=" hidden sm:block cursor-pointer text-primary  hover:scale-125 active:scale-100 transition rounded-full">{% render 'icon-chevron-right'
+, size: 30 %}</div>
   </div>
 </div>
 {% schema %}
